infra/k8s/ticketingexpiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketingexpiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketingexpiration
  template:
    metadata:
      labels:
        app: ticketingexpiration
    spec:
      containers:
        - name: ticketingexpiration
          image: williangrios/ticketingexpiration
