infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers: # temos nosso container especificado aqui
        - name: nats
          image: nats-streaming:0.17.0 # imagem que queremos rodar
          args: [
              '-p',
              '4222',
              '-m',
              '8222',
              '-hbi', # heartbeat - um pulso a cada x segundos para os clients para ver se esta rodando
              '5s',
              '-hbt', # how long each client has to respond
              '5s',
              '-hbf', # n. de vezes que cada cliente pode falhar antes de NATS reconhecer que o client caiu
              '2',
              '-SD',
              '-cid',
              'ticketing',
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
