infra/k8s/ticketingorders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketingorders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketingorders
  template:
    metadata:
      labels:
        app: ticketingorders
    spec:
      containers:
        - name: ticketingorders
          image: williangrios/ticketingorders
---
apiVersion: v1
kind: Service
metadata:
  name: ticketingorders-srv
spec:
  selector:
    app: ticketingorders
  ports:
    - name: ticketingorders
      protocol: TCP
      port: 3000
      targetPort: 3000
