infra/k8s/ticketingpayments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketingpayments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketingpayments
  template:
    metadata:
      labels:
        app: ticketingpayments
    spec:
      containers:
        - name: ticketingpayments
          image: williangrios/ticketingpayments
---
apiVersion: v1
kind: Service
metadata:
  name: ticketingpayments-srv
spec:
  selector:
    app: ticketingpayments
  ports:
    - name: ticketingpayments
      protocol: TCP
      port: 3000
      targetPort: 3000
